Add tooltips to buttons

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
                 <audio id="audio" controls></audio><br>
 
                 <input type="text" placeholder="YouTube URL" id="yt-url" size="50">
-                <input type="button" id="yt-clear-url-btn" value="x">
-                <input type="button" value="+" id="yt-add-btn"><br>
+                <input type="button" id="yt-clear-url-btn" value="x" title="Clear">
+                <input type="button" value="+" id="yt-add-btn" title="Add"><br>
                 <ul id="yt-list">
                 </ul>
                 <div id="yt-player"></div>
